fixed events overlapping with navbar

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -2,5 +2,7 @@
    position: fixed;
    width: 240px;
    z-index: 9000;
+   left: 0;
+   top: 0;
  }
  
